2011-02-15 Juan Manuel Ramon <juanmanuel.ramon@artica.es>
	* godmode/users/configure_profile.php: Added some variable initialization after
	selecting a defined profile.

	Fixes: #3182041

2011-02-14 Miguel de Dios  <miguel.dedios@artica.es>
	
	Merged bugfix from trunk

	* include/functions_db.php: fixed the module search.
	
	Fixes: #3181086

2011-02-14 Miguel de Dios  <miguel.dedios@artica.es>

	Merged pending task from trunk

	* include/functions_config.php, include/api.php, godmode/setup/setup.php:
	added the check by password the actions on API.
	
	Pending tasks: #3180793

2011-02-07  Sancho Lerena <slerena@artica.es>

	* operation/agentes/estado_generalagente.php: Show description in GIS information
	if description is available, if not, GPS coordinates.

2011-02-03 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* operation/search_alerts.php: Actions_name array now is initialized to void value.

	 Fixes: #3171506

2011-01-26  Miguel de Dios  <miguel.dedios@artica.es>

	Merged bugfix from trunk

	* operation/search_results.php: added the tab to show search list for
	modules. And cleaned source code style.
	
	* operation/search_modules.php: added the page to list the searched modules.

2011-01-26  Miguel de Dios  <miguel.dedios@artica.es>

	Merged bugfix from trunk

	* operation/agentes/status_monitor.php: fixed the ACL in the Module name for
	the select box in the filter.

	* operation/search_agents.php: fixed the ACL in the search of agent.

2011-01-24  Miguel de Dios  <miguel.dedios@artica.es>

	Merged bugfix from trunk
	
	* include/pChart/pChart.class: fixed in the function "drawTextBox" when
	pass a empty $Text as empty array.

2011-01-24  Miguel de Dios  <miguel.dedios@artica.es>

	Merged bugfix from trunk
	
	* operation/search_agents.php: fixed the pagination in the global search
	result.
	
2011-01-24  Miguel de Dios  <miguel.dedios@artica.es>

	Merged bugfix from trunk
	
	* include/javascript/pandora.js, operation/agentes/exportdata.php,