@@ -17,18 +17,11 @@
 // Load global vars
 global $config;
 
-check_login();
-
-if (! give_acl($config['id_user'], 0, "PM")) {
-	pandora_audit("ACL Violation",
-		"Trying to access Group Management");
-	require ("general/noaccess.php");
-	return;
-}
-
 require_once("include/functions_groups.php");
 
 if (is_ajax ()) {
+	check_acl($config['id_user'], 0, "AR");
+	
 	$get_group_json = (bool) get_parameter ('get_group_json');
 	$get_group_agents = (bool) get_parameter ('get_group_agents');
 	
@@ -75,6 +68,15 @@ if (is_ajax ()) {
 		return;
 	}
 
+	return;
+}
+
+check_login();
+
+if (! give_acl($config['id_user'], 0, "PM")) {
+	pandora_audit("ACL Violation",
+		"Trying to access Group Management");
+	require ("general/noaccess.php");
 	return;
 }
 
