@@ -1,3 +1,12 @@
+2011-02-15 Miguel de Dios  <miguel.dedios@artica.es>
+	
+	Merged bugfix from trunk
+
+	* godmode/groups/group_list.php: moved check ACL bottom the ajax call and
+	added other check ACL in the ajax call.
+	
+	Fixes: #3180588
+
 2011-02-15 Juan Manuel Ramon <juanmanuel.ramon@artica.es>
 	* godmode/users/configure_profile.php: Added some variable initialization after
 	selecting a defined profile.
